lots of progress
DDF simulation, colors, etc

--- a/ddf/simulation/interface/index.html
+++ b/ddf/simulation/interface/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
   <head>
-    <title>Goodale Simulation</title>
+    <title>DDF Simulation</title>
     <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
 
     <!-- LIBRARY FILES -->
