--- a/beat/interface/index.html
+++ b/beat/interface/index.html
@@ -12,5 +12,8 @@
   </head>
 
   <body>
+    <div class="volume"></div>
+    <div class="centroid"></div>
+    <div class="bar-container"></div>
   </body>
 </html>
