--- a/control_interface/index.html
+++ b/control_interface/index.html
@@ -3,6 +3,12 @@
   <head>
     <title>1E Disco Control</title>
     <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
+
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.0/moment.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js"></script>
     <script src="controller.js"></script>
   </head>
 
