--- a/ddf/simulation/interface/index.html
+++ b/ddf/simulation/interface/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
 
     <!-- LIBRARY FILES -->
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="../../../lib/jquery-2.0.3.min.js"></script>
 
     <script src="controller.js"></script>
     <link type="text/css" rel="stylesheet" href="styles.css"></script>
