Massive web UI commit
Say goodbye to the simulators! now everything is effectively simed within the main disco control UI.

Lots of untested code, but f it, I need to turn this in.

--- a/control_interface/index.html
+++ b/control_interface/index.html
@@ -4,12 +4,26 @@
     <title>1E Disco Control</title>
     <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
 
-    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.0/moment.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.0/backbone-min.js"></script>
-    <script src="controller.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/main.css"></script>
+
+    <script src="lib/jquery-2.0.3.min.js"></script>
+    <script src="lib/moment.min.js"></script>
+    <script src="lib/underscore.min.js"></script>
+    <script src="lib/handlebars-v1.3.0.js"></script>
+    <script src="lib/backbone.min.js"></script>
+    
+    <script src="init.js"></script>
+
+    <script src="js/model/BeatModel.js"></script>
+    <script src="js/model/PatternModel.js"></script>
+    <script src="js/model/DiscoModel.js"></script>
+    <script src="js/model/DiscoSession.js"></script>
+    <script src="js/controller/DiscoController.js"></script>
+    <script src="js/view/DdfPreview.js"></script>
+    <script src="js/view/BemisPreview.js"></script>
+    <script src="js/view/GoodalePreview.js"></script>
+
+    <script src="js/endpoint.js"></script>
   </head>
 
   <body>
