--- a/control_interface/index.html
+++ b/control_interface/index.html
@@ -23,7 +23,7 @@
     <script src="js/view/DdfPreview.js"></script>
     <script src="js/view/BemisPreview.js"></script>
     <script src="js/view/GoodalePreview.js"></script>
-    <script src="js/view/DdfDebug.js"></script>
+    <script src="js/view/PatternSelector.js"></script>
 
     <script src="js/endpoint.js"></script>
   </head>
