Saving patterns start
You can save patterns and use them in your patterns, but you can't load a saved pattern directly from the web UI yet.

--- a/control_interface/index.html
+++ b/control_interface/index.html
@@ -34,6 +34,8 @@
       <option value="{{attributes.name}}">{{attributes.name}}</option>
       {{/each}}
     </select>
+    <input type=text class="save-name-input"></input>
+    <button class="save-button">Save Pattern</button>
   </script>
 
   <body>
