--- a/control_interface/index.html
+++ b/control_interface/index.html
@@ -18,65 +18,83 @@
     <script src="js/model/BeatModel.js"></script>
     <script src="js/model/PatternModel.js"></script>
     <script src="js/model/DiscoModel.js"></script>
+    <script src="js/model/DisplayModel.js"></script>
     <script src="js/model/DiscoSession.js"></script>
     <script src="js/controller/DiscoController.js"></script>
-    <script src="js/view/DdfPreview.js"></script>
-    <script src="js/view/BemisPreview.js"></script>
-    <script src="js/view/GoodalePreview.js"></script>
+
+    <script src="js/view/DevicePreview.js"></script>
     <script src="js/view/PatternSelector.js"></script>
+    <script src="js/view/PreviewArea.js"></script>
+    <script src="js/view/SideMenu.js"></script>
 
     <script src="js/endpoint.js"></script>
   </head>
 
-  <script id="ddf-debug-template" type="text/x-handlebars-template">
-    <select class="class-patterns">
-      {{#each patterns}}
-      <option value="{{attributes.name}}">{{attributes.name}}</option>
-      {{/each}}
-    </select>
-    <select class="saved-patterns">
-      {{#each savedPatterns}}
-      <option value="{{attributes.saveName}}">{{attributes.saveName}}</option>
-      {{/each}}
-    </select>
-    <div class="params">
-      {{#each parameters}}
-        <div class="param">
-          <span>{{name}}: </span>
-          {{#if type}}
-            <input class="param-input" type="{{type}}" value="{{val}}" name="{{name}}" {{#if val}}checked="checked"{{/if}}></input>
-          {{else}}
-            {{#if pattern}}
-            <select class="param-input" name="{{name}}" data-type="pattern">
-              {{#each ../../../savedPatterns}}
-              <option value="{{attributes.saveName}}">{{attributes.saveName}}</option>
-              {{/each}}
-            </select>
-            {{/if}}
-            {{#if gif}}
-            <select class="param-input" name="{{name}}" data-type="gif">
-              {{#each ../../../gifList}}
-              <option value="{{attributes.name}}">{{attributes.name}}</option>
-              {{/each}}
-            </select>
-            {{/if}}
-            {{#if image}}
-            <select class="param-input" name="{{name}}" data-type="image">
-              {{#each ../../../imageList}}
-              <option value="{{attributes.name}}">{{attributes.name}}</option>
-              {{/each}}
-            </select>
-            {{/if}}
-          {{/if}}
-        </div>
-      {{/each}}
+  <script id="preview-template" type="text/x-handlebars-template">
+    <div class="preview-view">
+      <div class="expander">E</div>
     </div>
-    <input type=text class="save-name-input"></input>
-    <button class="save-button">Save Pattern</button>
+    <div class="selector-area">
+      {{#if showEdit}}
+        <b>Saved:</b> <select class="saved-patterns">
+          {{#each savedPatterns}}
+          <option value="{{attributes.saveName}}">{{attributes.saveName}}</option>
+          {{/each}}
+        </select>
+        <b>Builders:</b> <select class="class-patterns">
+          {{#each patterns}}
+          <option value="{{attributes.name}}">{{attributes.name}}</option>
+          {{/each}}
+        </select>
+        <div class="params">
+          {{#each parameters}}
+            <div class="param">
+              <span>{{name}}: </span>
+              {{#if type}}
+                <input class="param-input" type="{{type}}" value="{{val}}" name="{{name}}" {{#if val}}checked="checked"{{/if}}></input>
+              {{else}}
+                {{#if pattern}}
+                <select class="param-input" name="{{name}}" data-type="pattern">
+                  {{#each ../../../savedPatterns}}
+                  <option value="{{attributes.saveName}}">{{attributes.saveName}}</option>
+                  {{/each}}
+                </select>
+                {{/if}}
+                {{#if gif}}
+                <select class="param-input" name="{{name}}" data-type="gif">
+                  {{#each ../../../gifList}}
+                  <option value="{{attributes.name}}">{{attributes.name}}</option>
+                  {{/each}}
+                </select>
+                {{/if}}
+                {{#if image}}
+                <select class="param-input" name="{{name}}" data-type="image">
+                  {{#each ../../../imageList}}
+                  <option value="{{attributes.name}}">{{attributes.name}}</option>
+                  {{/each}}
+                </select>
+                {{/if}}
+              {{/if}}
+            </div>
+          {{/each}}
+        </div>
+        <input type=text class="save-name-input"></input>
+        <button class="save-button">Save Pattern</button>
+      {{/if}}
+    </div>
+  </script>
+
+  <script id="side-menu-template" type="text/x-handlebars-template">
+    Show Real: <input type="checkbox" class="menu-check show-real"></input>
+    <br/>
+    Show Mock: <input type="checkbox" class="menu-check show-mock"></input>
+    <br/>
+    <button class="swap-mock-real">Copy Mock Patterns to Real</button>
+    <button class="swap-real-mock">Copy Real Patterns to Mock</button>
   </script>
 
   <body>
-    <div class="realVis"></div>
-
+    <div class="menu"></div>
+    <div class="previews"></div>
   </body>
 </html>
