--- a/control_interface/index.html
+++ b/control_interface/index.html
@@ -13,6 +13,8 @@
     <script src="lib/underscore.min.js"></script>
     <script src="lib/handlebars-v1.3.0.js"></script>
     <script src="lib/backbone.min.js"></script>
+    <script src="lib/mousetrap.min.js"></script>
+    <script src="lib/mousetrap-bind-dictionary.min.js"></script>
 
     <script src="js/init.js"></script>
     <script src="js/templates.js"></script>
@@ -21,6 +23,7 @@
     <script src="js/model/PatternModel.js"></script>
     <script src="js/model/DiscoModel.js"></script>
     <script src="js/model/DisplayModel.js"></script>
+    <script src="js/model/HotkeyModel.js"></script>
     <script src="js/model/DiscoSession.js"></script>
     <script src="js/controller/DiscoController.js"></script>
 
