Key bindings holy shit

--- a/control_interface/index.html
+++ b/control_interface/index.html
@@ -25,6 +25,7 @@
     <script src="js/model/DisplayModel.js"></script>
     <script src="js/model/HotkeyModel.js"></script>
     <script src="js/model/DiscoSession.js"></script>
+    <script src="js/controller/KeyController.js"></script>
     <script src="js/controller/DiscoController.js"></script>
 
     <script src="js/view/NavBar.js"></script>
